--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 /[Ll]ibrary/
+/Library/
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
@@ -61,7 +62,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 Library/assetDatabase3
-Library/assetDatabase3
-Library/assetDatabase3
 Library/metadata/6b/6b78ca75f7db63247b162596d16282b1
 *.info
+*.asset
